# EDR-BETA

./: .env  README.md  docker-compose.yml
agent/: Cargo.toml  config.json
agent/ebpf-code/: Cargo.toml
agent/ebpf-code/src/: main.rs
agent/ebpf-common/: Cargo.toml
agent/ebpf-common/src/: lib.rs
agent/src/: api_client.rs  config.rs  ebpf_monitor.rs  main.rs  monitor.rs  offline_queue.rs  policy_engine.rs  scanner.rs
backend/: Dockerfile  main.py  requirements.txt
backend/api/: dashboard_routes.py  routes.py
backend/broker/: producer.py
backend/core/: cache.py  config.py  schemas.py
backend/db/: models.py  session.py
backend/services/: ml_inference.py  reputation.py  static_analyzer.py
backend/workers/: ml_worker.py  sandbox_worker.py  static_worker.py
frontend/: index.html
models/: train.py
sandbox/: Dockerfile  runner.py  tracer.sh
