[package]
name = "hybrid-edr-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1.5"
